app/_styles/ui/navbar.module.css
.navbar {
  position: sticky;
  top: 12px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 40px;
  height: 69px;
  background-color: hsl(var(--black) / 0.7);
  border: 2px solid hsl(var(--grey) / 0.7);
  border-radius: var(--radius-m);
  backdrop-filter: blur(10px);
  padding: 15px 32px;
  margin: 24px auto 0;
  z-index: 1000;
  opacity: 0;
}

.border {
  display: none;
}

.logo {
  display: block;
  height: 37px;
  min-width: fit-content;
  cursor: pointer;
}

.logo > svg {
  width: 100%;
  height: 100%;
}

.hamburger {
  display: none; /* hide the hamburger menu on desktop */
}

.links {
  display: flex;
  align-items: center;
  gap: 40px;
}

.links > a:hover:not(.button) {
  color: hsl(223 98% 65%); /* slightly lighter blue */
  transition: color font-weight margin-inline 0.3s ease;
}

.links > .button {
  background-color: hsl(var(--blue));
  border-radius: var(--radius-s);
  padding: 10px 26px;
  overflow: hidden;
}

.links > .button > span {
  display: flex;
  align-items: center;
  gap: 8px;
  line-height: 1;
  color: hsl(var(--white));
}

/* Media query */
@media screen and (max-width: 810px) {
  .navbar {
    width: auto;
    height: 52px;
    padding: 14px;
    margin-inline: 12px;
    clip-path: inset(0 0 -300px 0 round 8px);
  }

  .border {
    display: none;
    position: fixed;
    top: -2px;
    left: -2px;
    right: -2px;
    height: 8px;
    background-color: hsl(var(--grey) / 0.7);
    border-radius: var(--radius-m) var(--radius-m) 0 0;
    /* simulate the look of a rounded top border for navbar */
    clip-path: polygon(
      0 100%,
      0 0,
      100% 0,
      100% 100%,
      99.3% 100%,
      99.1% 5px,
      98.7% 3.5px,
      98% 2px,
      6px 2px,
      4px 3.3px,
      2.6px 5px,
      2px 100%
    );
  }

  .logo {
    height: 28px;
  }

  .hamburger {
    display: block;
    height: 34px;
    width: 34px;
    cursor: pointer;
    user-select: none;
  }

  .hamburger > svg {
    position: absolute;
  }
  .hamburger > svg:last-child {
    display: none;
    opacity: 0;
  }

  .links {
    display: none;
    position: fixed;
    width: calc(100% + 4px);
    bottom: 0;
    left: -2;
    right: -2;
    flex-direction: column;
    align-items: start;
    gap: 36px;
    background-color: hsl(var(--black) / 0.8);
    border-radius: 0 0 var(--radius-m) var(--radius-m);
    border: 2px solid hsl(var(--grey) / 0.7);
    border-top: 0;
    backdrop-filter: blur(12px);
    padding: 24px;
    z-index: -1;
  }

  .links > * {
    transform: translateY(-15px);
    opacity: 0;
  }

  .links > a:not(.button) {
    font-size: 1.4rem;
  }

  .links > .button {
    display: flex;
    place-content: center;
    width: 100%;
    height: 44px;
    font-size: 20px;
    margin-bottom: 1px;
  }
}

